--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
       }
     }
 </script>
-Doing - 1
+Doing - 2
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -23,7 +23,7 @@ Doing - 1
 {% assign apisjson = site.data.apis %}
 {% assign apicommons = site.data.api-commons %}
 
-{{ apicommons }}
+{{ apisjson }}
 
     {% assign blog_url = '' %}
     {% assign blogrss_url = '' %}
