--- a/index.html
+++ b/index.html
@@ -14,218 +14,212 @@ layout: page
       }
     }
 </script>
-Doing - 4
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
   </tr>
 
 {% assign index = site.data.apis %}
-{% assign contents = site.data.api-commons %}
-
 {% assign apijson = index[0] %}
+{% assign contents = site.data.api-commons %}
 {% assign apicommons = contents[0] %}
-{{ apijson }}
 
-    {% assign blog_url = '' %}
-    {% assign blogrss_url = '' %}
-    {% assign portal_url = '' %}
-    {% assign gitub_url = '' %}
-    {% assign twitter_url = '' %}
-    {% assign website_url = '' %}
+{% assign blog_url = '' %}
+{% assign blogrss_url = '' %}
+{% assign portal_url = '' %}
+{% assign gitub_url = '' %}
+{% assign twitter_url = '' %}
+{% assign website_url = '' %}
 
-    {% for common in apijson.x-common %}
-      {% if common.type == 'x-blog' %}
-        {% assign blog_url = common.url %}
+{% for common in apijson.x-common %}
+  {% if common.type == 'x-blog' %}
+    {% assign blog_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-blog-rss-feed' %}
+    {% assign blogrss_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-portal' %}
+    {% assign portal_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-github' %}
+    {% assign gitub_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-twitter' %}
+    {% assign twitter_url = common.url %}
+  {% endif %}
+{% endfor %}
+
+{% if apisjson.humanURL == null %}
+  {% assign website_url = portal_url %}
+{% else %}
+  {% assign website_url = apisjson.humanURL %}
+{% endif %}
+
+  <tr>
+    <td colspan="2">
+      {% if apijson.image != null %}
+        <a href="{{ website_url }}">
+          <img src="{{ apijson.image }}" align="left" style="padding: 5px;" width="150" />
+        </a>
       {% endif %}
-      {% if common.type == 'x-blog-rss-feed' %}
-        {% assign blogrss_url = common.url %}
-      {% endif %}
-      {% if common.type == 'x-portal' %}
-        {% assign portal_url = common.url %}
-      {% endif %}
-      {% if common.type == 'x-github' %}
-        {% assign gitub_url = common.url %}
-      {% endif %}
-      {% if common.type == 'x-twitter' %}
-        {% assign twitter_url = common.url %}
-      {% endif %}
-    {% endfor %}
-
-    {% if apisjson.humanURL == null %}
-      {% assign website_url = portal_url %}
-    {% else %}
-      {% assign website_url = apisjson.humanURL %}
-    {% endif %}
-
-      <tr>
-        <td colspan="2">
-          {% if apijson.image != null %}
-            <a href="{{ website_url }}">
-              <img src="{{ apijson.image }}" align="left" style="padding: 5px;" width="150" />
-            </a>
-          {% endif %}
-          <a href="{{ website_url }}" style="font-size: 22px;"><strong>{{ apijson.name }}</strong></a><br />
-          {{ apijson.description }}
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2" align="center" style="margin-left: 25px; margin-right: 25px;">
-          <ul style="list-style: none; display: inline;">
-            {% if portal_url != '' %}
-              <li style="display: inline; padding-left: 15px; padding-right: 15px;">
-                <a href="{{ portal_url }}" target="_blank" title="Portal">
-                  <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-portal-developers.jpg" width="36" align="center" />
-                </a>
-              </li>
-            {% endif %}
-            {% if blog_url != '' %}
-              <li style="display: inline; padding-left: 15px; padding-right: 15px;">
-                <a href="{{ blog_url }}" target="_blank" title="Blog">
-                  <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png" width="36" align="center" />
-                </a>
-              </li>
-            {% endif %}
-
-            {% if blogrss_url != '' %}
-              <li style="display: inline; padding-left: 15px; padding-right: 15px;">
-                <a href="{{ blogrss_url }}" target="_blank" title="Blog RSS">
-                  <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-rss-icon.png" width="36" align="center" />
-                </a>
-              </li>
-            {% endif %}
-
-            {% if twitter_url != '' %}
-              <li style="display: inline; padding-left: 15px; padding-right: 15px;">
-                <a href="{{ twitter_url }}" target="_blank" title="Twitter">
-                  <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" width="55" align="center" />
-                </a>
-              </li>
-            {% endif %}
-
-            {% if gitub_url != '' %}
-              <li style="display: inline; padding-left: 15px; padding-right: 15px;">
-                <a href="{{ gitub_url }}" target="_blank" title="Github">
-                  <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-github-icon.png" width="62" align="center" />
-                </a>
-              </li>
-            {% endif %}
-
-            {% if apijson.url != null %}
-              <li style="display: inline; padding-left: 15px; padding-right: 15px;">
-                <a href="{{ apijson.url }}" target="_blank" title="APIs.json">
-                  <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-api-a.png" width="61" align="center" />
-                </a>
-              </li>
-            {% endif %}
-          </ul>
-        </td>
-      </tr>
-      <tr>
-        <td width="50%" align="center">[list others]</td>
-        <td width="50%">
-          <table width="100%" border="1">
-          <tr>
-            <td align="center" style="margin-left: 90px; margin-right: 90px;">
-
-                {% assign api_action_url = '' %}
-                {% assign numberofapis = apijson.apis | size %}
-
-                  <p style="font-size: 18px;"><strong>APIs</strong></p>
-                    {% assign api_action_url = '' %}
-                    {% for api in apijson.apis %}
-
-                    <table cellpadding="3" cellspacing="2" width="100%" border="0">
-
-                        {% assign api_action_spec = '' %}
-                        {% assign api_action_url = '' %}
-                        {% for property in api.properties %}
-
-                          {% assign thisname = apijson.name | downcase %}
-                          {% assign thisname = thisname | append:'/' %}
-                          {% assign thisname = thisname | replace: ' ','-' %}
-
-                          {% if property.type == 'x-openapi-spec' %}
-
-                            {% assign openapi_spec_url = property.url %}
-                            {% assign pathname = openapi_spec_url | replace: '_data/','' %}
-                            {% assign pathname = pathname | replace: '.yaml','' %}
-                            {% assign pathname = pathname | replace: '/','.' %}
-
-                            {% assign openapi_spec_json = file | map: pathname %}
-
-                          {% endif %}
-
-                          {% if property.type == 'x-postman %}
-                            {% assign postman_url = property.url %}
-                          {% endif %}
-
-                          {% if property.type == 'x-api-blueprint' %}
-                            {% assign api_blueprint_url = property.url %}
-                          {% endif %}
-
-                          {% if property.type == 'x-api-actions' %}
-                            {% assign api_action_url = property.url %}
-                          {% endif %}
-
-                        {% endfor %}
-
-                        <tr>
-                          <td align="left">
-                            {{ api.name }}
-                          </td>
-                          <td align="right">
-                            {% if openapi_spec_url != null and openapi_spec_url != empty %}
-                              <a href="{{ openapi_spec_url }}" target="_blank" title="OpenAPI Spec">
-                                <img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/openapi-spec/open-api-spec-icon.png" width="25" align="right" />
-                              </a>
-                            {% endif %}
-                            {% if api_blueprint_url != null and api_blueprint_url != empty %}
-                              <a href="{{ api_blueprint_url }}" target="_blank" title="API Blueprint">
-                                <img style="padding: 15px;" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-api-blueprint-icon.png" width="25" align="right" />
-                              </a>
-                            {% endif %}
-                            {% if postman_url != null and postman_url != empty %}
-                              <a href="{{ postman_url }}" target="_blank" title="API Blueprint">
-                                <img style="padding: 15px;" src="https://s3.amazonaws.com/kinlane-productions/building-blocks/x-postman.png" width="25" align="right" />
-                              </a>
-                            {% endif %}
-                            <a href="#" onclick="showme('methods-for-{{ pathname }}'); return false;" target="_blank" title="View Endpoint List">
-                              <img style="padding-top: 4px; padding-right: 3px; padding-left: 3px;" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-endpoints.png" width="25" align="right" />
-                            </a>
-                          </td>
-                        </tr>
-                        <tr style="display: none;" id="methods-for-{{ pathname }}">
-                          <td colspan="2" align="left" style="margin-left: 25px; margin-right: 25px;">
-                            --{{ openapi_spec_json }}--
-                            <ul>
-                              {% for spec in openapi_spec_json %}
-
-                                {% for path in spec.paths %}
-
-                                  {% assign method_json = path[1] %}
-
-                                  {% for method in method_json %}
-
-                                    {% assign verb = method[0] | upcase %}
-                                    {% assign summary = method[1].summary %}
-                                    <li style="font-size: 12px;">{{ path[0] }} <strong>[{{ verb }}]</strong> {{ summary }}</li>
-
-                                  {% endfor %}
-
-                                {% endfor %}
-
-                              {% endfor %}
-                            </ul>
-                          </td>
-                        </tr>
-                      </table>
-                    {% endfor %}
-                </td>
-              </tr>
-            </td>
-          </tr>
-      </table>
+      <a href="{{ website_url }}" style="font-size: 22px;"><strong>{{ apijson.name }}</strong></a><br />
+      {{ apijson.description }}
     </td>
   </tr>
-</table>
+  <tr>
+    <td colspan="2" align="center" style="margin-left: 25px; margin-right: 25px;">
+      <ul style="list-style: none; display: inline;">
+        {% if portal_url != '' %}
+          <li style="display: inline; padding-left: 15px; padding-right: 15px;">
+            <a href="{{ portal_url }}" target="_blank" title="Portal">
+              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-portal-developers.jpg" width="36" align="center" />
+            </a>
+          </li>
+        {% endif %}
+        {% if blog_url != '' %}
+          <li style="display: inline; padding-left: 15px; padding-right: 15px;">
+            <a href="{{ blog_url }}" target="_blank" title="Blog">
+              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png" width="36" align="center" />
+            </a>
+          </li>
+        {% endif %}
+
+        {% if blogrss_url != '' %}
+          <li style="display: inline; padding-left: 15px; padding-right: 15px;">
+            <a href="{{ blogrss_url }}" target="_blank" title="Blog RSS">
+              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-rss-icon.png" width="36" align="center" />
+            </a>
+          </li>
+        {% endif %}
+
+        {% if twitter_url != '' %}
+          <li style="display: inline; padding-left: 15px; padding-right: 15px;">
+            <a href="{{ twitter_url }}" target="_blank" title="Twitter">
+              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" width="55" align="center" />
+            </a>
+          </li>
+        {% endif %}
+
+        {% if gitub_url != '' %}
+          <li style="display: inline; padding-left: 15px; padding-right: 15px;">
+            <a href="{{ gitub_url }}" target="_blank" title="Github">
+              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-github-icon.png" width="62" align="center" />
+            </a>
+          </li>
+        {% endif %}
+
+        {% if apijson.url != null %}
+          <li style="display: inline; padding-left: 15px; padding-right: 15px;">
+            <a href="{{ apijson.url }}" target="_blank" title="APIs.json">
+              <img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-api-a.png" width="61" align="center" />
+            </a>
+          </li>
+        {% endif %}
+      </ul>
+    </td>
+  </tr>
+  <tr>
+    <td width="50%" align="center">[list others]</td>
+    <td width="50%">
+      <table width="100%" border="1">
+      <tr>
+        <td align="center" style="margin-left: 90px; margin-right: 90px;">
+
+            {% assign api_action_url = '' %}
+            {% assign numberofapis = apijson.apis | size %}
+
+              <p style="font-size: 18px;"><strong>APIs</strong></p>
+                {% assign api_action_url = '' %}
+                {% for api in apijson.apis %}
+
+                <table cellpadding="3" cellspacing="2" width="100%" border="0">
+
+                    {% assign api_action_spec = '' %}
+                    {% assign api_action_url = '' %}
+                    {% for property in api.properties %}
+
+                      {% assign thisname = apijson.name | downcase %}
+                      {% assign thisname = thisname | append:'/' %}
+                      {% assign thisname = thisname | replace: ' ','-' %}
+
+                      {% if property.type == 'x-openapi-spec' %}
+
+                        {% assign openapi_spec_url = property.url %}
+                        {% assign pathname = openapi_spec_url | replace: '_data/','' %}
+                        {% assign pathname = pathname | replace: '.yaml','' %}
+                        {% assign pathname = pathname | replace: '/','.' %}
+
+                        {% assign openapi_spec_json = apicommons | map: pathname %}
+
+                      {% endif %}
+
+                      {% if property.type == 'x-postman %}
+                        {% assign postman_url = property.url %}
+                      {% endif %}
+
+                      {% if property.type == 'x-api-blueprint' %}
+                        {% assign api_blueprint_url = property.url %}
+                      {% endif %}
+
+                      {% if property.type == 'x-api-actions' %}
+                        {% assign api_action_url = property.url %}
+                      {% endif %}
+
+                    {% endfor %}
+
+                    <tr>
+                      <td align="left">
+                        {{ api.name }}
+                      </td>
+                      <td align="right">
+                        {% if openapi_spec_url != null and openapi_spec_url != empty %}
+                          <a href="{{ openapi_spec_url }}" target="_blank" title="OpenAPI Spec">
+                            <img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/openapi-spec/open-api-spec-icon.png" width="25" align="right" />
+                          </a>
+                        {% endif %}
+                        {% if api_blueprint_url != null and api_blueprint_url != empty %}
+                          <a href="{{ api_blueprint_url }}" target="_blank" title="API Blueprint">
+                            <img style="padding: 15px;" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-api-blueprint-icon.png" width="25" align="right" />
+                          </a>
+                        {% endif %}
+                        {% if postman_url != null and postman_url != empty %}
+                          <a href="{{ postman_url }}" target="_blank" title="API Blueprint">
+                            <img style="padding: 15px;" src="https://s3.amazonaws.com/kinlane-productions/building-blocks/x-postman.png" width="25" align="right" />
+                          </a>
+                        {% endif %}
+                        <a href="#" onclick="showme('methods-for-{{ pathname }}'); return false;" target="_blank" title="View Endpoint List">
+                          <img style="padding-top: 4px; padding-right: 3px; padding-left: 3px;" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-endpoints.png" width="25" align="right" />
+                        </a>
+                      </td>
+                    </tr>
+                    <tr style="display: none;" id="methods-for-{{ pathname }}">
+                      <td colspan="2" align="left" style="margin-left: 25px; margin-right: 25px;">
+                        --{{ openapi_spec_json }}--
+                        <ul>
+                          {% for spec in openapi_spec_json %}
+
+                            {% for path in spec.paths %}
+
+                              {% assign method_json = path[1] %}
+
+                              {% for method in method_json %}
+
+                                {% assign verb = method[0] | upcase %}
+                                {% assign summary = method[1].summary %}
+                                <li style="font-size: 12px;">{{ path[0] }} <strong>[{{ verb }}]</strong> {{ summary }}</li>
+
+                              {% endfor %}
+
+                            {% endfor %}
+
+                          {% endfor %}
+                        </ul>
+                      </td>
+                    </tr>
+                  </table>
+                {% endfor %}
+            </td>
+          </tr>
+        </td>
+      </tr>
+  </table>
