--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
       }
     }
 </script>
-working - 3
+working - 4
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -23,7 +23,7 @@ working - 3
 {% assign index = site.data.apis %}
 {% assign apijson = index[0] %}
 {% assign contents = site.data.api-commons %}
-{% assign apicommons = contents[0] %}
+{% assign apicommons = contents %}
 {{ apicommons }}
 {% assign blog_url = '' %}
 {% assign blogrss_url = '' %}
