--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@ working - 4
                         {% assign pathname = pathname | replace: '.yaml','' %}
                         {% assign pathname = pathname | replace: '/','.' %}
 
+                        {{ pathname }}<br />
+                        {{ apicommons }}<br />
                         {% assign openapi_spec_json = apicommons | map: pathname %}
 
                       {% endif %}
