--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ working - 4
                         {% for entry in apicommons %}
                           {% assign thisname = entry[0] %}
                           {% if thisname == pathname %}
+                          DOING!
                             {% assign openapi_spec_json = entry[1] %}
                           {% endif %}
                         {% endfor %}
