--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@ working - 4
                           {% if thisname == pathname %}
                           DOING!
                             {% assign openapi_spec_json = entry[1] %}
+                            {{ openapi_spec_json }}
                           {% endif %}
                         {% endfor %}
 
