--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: page
       }
     }
 </script>
-working - 8
+working - 9
 <table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 10px;">
   <tr>
     <td align="center" colspan="2"><hr /></td>
@@ -200,13 +200,11 @@ working - 8
                         </a>
                       </td>
                     </tr>
-                    <tr><td> {{ openapi_spec_json }}</td></tr>
-                    <tr style="display: none;" id="methods-for-{{ pathname }}">
+                    <tr id="methods-for-{{ pathname }}">
                       <td colspan="2" align="left" style="margin-left: 25px; margin-right: 25px;">
-                      ---  {{ openapi_spec_json }}999
                         <ul>
                           {% for spec in openapi_spec_json %}
-                            {{ spec }}
+
                             {% for path in spec.paths %}
 
                               {% assign method_json = path[1] %}
