--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@ layout: page
   {% if common.type == 'x-portal' %}
     {% assign portal_url = common.url %}
   {% endif %}
+  {% if common.type == 'x-authentication-overview' %}
+    {% assign authentication_url = common.url %}
+  {% endif %}
   {% if common.type == 'x-github' %}
     {% assign gitub_url = common.url %}
   {% endif %}
@@ -65,6 +68,12 @@ layout: page
   {% endif %}
   {% if common.type == 'x-getting-started' %}
     {% assign getting_started_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-login' %}
+    {% assign login_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-signup' %}
+    {% assign signup_url = common.url %}
   {% endif %}
   {% if common.type == 'x-road-map' %}
     {% assign road_map_url = common.url %}
@@ -139,120 +148,127 @@ layout: page
 					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>On-boarding</strong></td>
 				</tr>
         {% if getting_started_url != '' %}
-				<tr id="X-getting-started-row">
+				<tr id="x-getting-started-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="{{ getting_started_url }}" id="X-getting-started-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-running.png" width="35" /></a></td>
-					<td><a href="{{ getting_started_url }}" id="X-getting-started-url">Getting Started</a><div id="d-getting-started"></div></td>
+					<td width="75" align="center" valign="middle"><a href="{{ getting_started_url }}" id="x-getting-started-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-running.png" width="35" /></a></td>
+					<td><a href="{{ getting_started_url }}" id="x-getting-started-url">Getting Started</a><div id="d-getting-started"></div></td>
 				</tr>
         {% endif %}
         {% if authentication_url != '' %}
-				<tr id="X-authentication-row">
+				<tr id="x-authentication-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="X-authentication-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-authentication.png" width="35" /></a></td>
-					<td><a href="" id="X-authentication-url">Authentication</a><div id="d-authentication"></div></td>
+					<td width="75" align="center" valign="middle"><a href="" id="x-authentication-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-authentication.png" width="35" /></a></td>
+					<td><a href="" id="x-authentication-url">Authentication</a><div id="d-authentication"></div></td>
 				</tr>
         {% endif %}
         {% if faq_url != '' %}
-				<tr id="X-faq-row">
+				<tr id="x-faq-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="{{ faq_url }}" id="X-faq-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-question-mark.png" width="35" /></a></td>
-					<td><a href="{{ faq_url }}" id="X-faq-url">FAQ</a><div id="d-faq"></div></td>
+					<td width="75" align="center" valign="middle"><a href="{{ faq_url }}" id="x-faq-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-question-mark.png" width="35" /></a></td>
+					<td><a href="{{ faq_url }}" id="x-faq-url">FAQ</a><div id="d-faq"></div></td>
 				</tr>
         {% endif %}
-        {% if gitub_url != '' %}
-				<tr id="X-self-service-registration-row">
+        {% if signup_url != '' %}
+				<tr id="x-signup-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="X-self-service-registration-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-hand-wrench.jpg" width="35" /></a></td>
-					<td><a href="" id="X-self-service-registration-url">Registration</a><div id="d-self-service-registration"></div></td>
+					<td width="75" align="center" valign="middle"><a href="" id="x-signup-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/x-signup.png" width="35" /></a></td>
+					<td><a href="" id="x-signup-url">Signup</a><div id="d-signup"></div></td>
+				</tr>
+        {% endif %}
+        {% if login_url != '' %}
+				<tr id="x-login-row">
+					<td width="25" style="height: 55px;"></td>
+					<td width="75" align="center" valign="middle"><a href="{{ login_url }}" id="x-login-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/x-login-png" width="35" /></a></td>
+					<td><a href="{{ login_url }}" id="x-login-url">Signup</a><div id="d-login"></div></td>
 				</tr>
         {% endif %}
 				<tr id="integration">
 					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Integration</strong></td>
 				</tr>
-        {% if gitub_url != '' %}
-				<tr id="X-documentation-row">
+        {% if documentation_url != '' %}
+				<tr id="x-documentation-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="X-documentation-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-documentation-interactive.png" width="35" /></a></td>
-					<td><a href="" id="X-documentation-url">Documentation</a><div id="d-documentation"></div></td>
+					<td width="75" align="center" valign="middle"><a href="{{ documentation_url }}" id="x-documentation-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-documentation-interactive.png" width="35" /></a></td>
+					<td><a href="{{ documentation_url }}" id="x-documentation-url">Documentation</a><div id="d-documentation"></div></td>
 				</tr>
         {% endif %}
-        {% if gitub_url != '' %}
-				<tr id="X-code-row">
+        {% if code_url != '' %}
+				<tr id="x-code-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="X-code-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-code.png" width="35" /></a></td>
-					<td><a href="" id="X-code-url">Code</a><div id="d-code"></div></td>
+					<td width="75" align="center" valign="middle"><a href="" id="x-code-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-code.png" width="35" /></a></td>
+					<td><a href="" id="x-code-url">Code</a><div id="d-code"></div></td>
 				</tr>
         {% endif %}
-        {% if gitub_url != '' %}
-				<tr id="X-pricing-row">
+        {% if plan_url != '' %}
+				<tr id="x-plan-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="X-pricing-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-dollar-sign.jpg" width="35" /></a></td>
-					<td><a href="" id="X-pricing-url">Plans</a><div id="d-pricing"></div></td>
+					<td width="75" align="center" valign="middle"><a href="{{ plan_url }}" id="x-plan-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/x-plan.png" width="35" /></a></td>
+					<td><a href="{{ plan_url }}" id="x-plan-url">Plans</a><div id="d-plan"></div></td>
 				</tr>
         {% endif %}
-        {% if gitub_url != '' %}
-				<tr id="X-rate-limits-page-row">
+        {% if rate_limit_url != '' %}
+				<tr id="x-rate-limits-page-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="X-rate-limits-page-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-speed-limit.jpeg" width="35" /></a></td>
-					<td><a href="" id="X-rate-limits-page-url">Rate Limits</a><div id="d-rate-limits"></div></td>
+					<td width="75" align="center" valign="middle"><a href="" id="x-rate-limits-page-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-speed-limit.jpeg" width="35" /></a></td>
+					<td><a href="" id="x-rate-limits-page-url">Rate Limits</a><div id="d-rate-limits"></div></td>
 				</tr>
         {% endif %}
         {% if gitub_url != '' %}
 				<tr id="support">
 					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Support</strong></td>
 				</tr>
-				<tr id="X-support-row">
+				<tr id="x-support-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="X-support-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-support.png" width="35" /></a></td>
-					<td><a href="" id="X-support-url">Support</a><div id="d-support"></div></td>
+					<td width="75" align="center" valign="middle"><a href="" id="x-support-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-support.png" width="35" /></a></td>
+					<td><a href="" id="x-support-url">Support</a><div id="d-support"></div></td>
 				</tr>
         {% endif %}
 				<tr id="updates">
 					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Updates</strong></td>
 				</tr>
         {% if gitub_url != '' %}
-				<tr id="X-roadmap-row">
+				<tr id="x-roadmap-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="X-roadmap-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-highway.png" width="35" /></a></td>
-					<td><a href="" id="X-roadmap-url">Roadmap</a><div id="d-roadmap"></div></td>
+					<td width="75" align="center" valign="middle"><a href="" id="x-roadmap-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-highway.png" width="35" /></a></td>
+					<td><a href="" id="x-roadmap-url">Roadmap</a><div id="d-roadmap"></div></td>
 				</tr>
         {% endif %}
         {% if gitub_url != '' %}
-				<tr id="X-issues-row">
+				<tr id="x-issues-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="X-issues-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-bug.png" width="35" /></a></td>
-					<td><a href="" id="X-issues-url">Issues</a><div id="d-issues"></div></td>
+					<td width="75" align="center" valign="middle"><a href="" id="x-issues-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-bug.png" width="35" /></a></td>
+					<td><a href="" id="x-issues-url">Issues</a><div id="d-issues"></div></td>
 				</tr>
         {% endif %}
         {% if gitub_url != '' %}
-				<tr id="X-change-log-row">
+				<tr id="x-change-log-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="X-change-log-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-recycling.jpg" width="35" /></a></td>
-					<td><a href="" id="X-change-log-url">Change Log</a><div id="d-change-log"></div></td>
+					<td width="75" align="center" valign="middle"><a href="" id="x-change-log-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-recycling.jpg" width="35" /></a></td>
+					<td><a href="" id="x-change-log-url">Change Log</a><div id="d-change-log"></div></td>
 				</tr>
         {% endif %}
         {% if gitub_url != '' %}
-				<tr id="X-status-dashboard-row">
+				<tr id="x-status-dashboard-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="X-status-dashboard-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-status-dashboard.png" width="35" /></a></td>
-					<td><a href="" id="X-status-dashboard-url">Status</a><div id="d-status-dashboard"></div></td>
+					<td width="75" align="center" valign="middle"><a href="" id="x-status-dashboard-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-status-dashboard.png" width="35" /></a></td>
+					<td><a href="" id="x-status-dashboard-url">Status</a><div id="d-status-dashboard"></div></td>
 				</tr>
         {% endif %}
 				<tr id="legal">
 					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Legal</strong></td>
 				</tr>
         {% if gitub_url != '' %}
-				<tr id="X-terms-of-service-row">
+				<tr id="x-terms-of-service-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="X-terms-of-service-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-terms-conditions.png" width="35" /></a></td>
-					<td><a href="" id="X-terms-of-service-url">Terms of Service</a><div id="d-terms-of-service"></div></td>
+					<td width="75" align="center" valign="middle"><a href="" id="x-terms-of-service-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-terms-conditions.png" width="35" /></a></td>
+					<td><a href="" id="x-terms-of-service-url">Terms of Service</a><div id="d-terms-of-service"></div></td>
 				</tr>
         {% endif %}
         {% if gitub_url != '' %}
-				<tr id="X-privacy-policy-row">
+				<tr id="x-privacy-policy-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="X-privacy-policy-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-privacy.png" width="35" /></a></td>
-					<td><a href="" id="X-privacy-policy-url">Privacy Policy</a><div id="d-privacy-policy"></div></td>
+					<td width="75" align="center" valign="middle"><a href="" id="x-privacy-policy-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-privacy.png" width="35" /></a></td>
+					<td><a href="" id="x-privacy-policy-url">Privacy Policy</a><div id="d-privacy-policy"></div></td>
 				</tr>
         {% endif %}
 			</table>
