--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@ layout: page
   {% if common.type == 'x-api-plan' %}
     {% assign api_plan_url = common.url %}
   {% endif %}
+  {% if common.type == 'x-rate-limit' %}
+    {% assign rate_limit_url = common.url %}
+  {% endif %}
 
 {% endfor %}
 
@@ -209,18 +212,18 @@ layout: page
         {% if rate_limit_url != '' %}
 				<tr id="x-rate-limits-page-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="x-rate-limits-page-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-speed-limit.jpeg" width="35" /></a></td>
-					<td><a href="" id="x-rate-limits-page-url">Rate Limits</a><div id="d-rate-limits"></div></td>
+					<td width="75" align="center" valign="middle"><a href="{{ rate_limit_url }}" id="x-rate-limits-page-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-speed-limit.jpeg" width="35" /></a></td>
+					<td><a href="{{ rate_limit_url }}" id="x-rate-limits-page-url">Rate Limits</a><div id="d-rate-limits"></div></td>
 				</tr>
         {% endif %}
-        {% if gitub_url != '' %}
+        {% if support_url != '' %}
 				<tr id="support">
 					<td colspan="3" style="font-size: 22px; padding: 15px;"><strong>Support</strong></td>
 				</tr>
 				<tr id="x-support-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="x-support-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-support.png" width="35" /></a></td>
-					<td><a href="" id="x-support-url">Support</a><div id="d-support"></div></td>
+					<td width="75" align="center" valign="middle"><a href="{{ support_url }}" id="x-support-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-support.png" width="35" /></a></td>
+					<td><a href="{{ support_url }}" id="x-support-url">Support</a><div id="d-support"></div></td>
 				</tr>
         {% endif %}
 				<tr id="updates">
