--- a/index.html
+++ b/index.html
@@ -176,15 +176,15 @@ layout: page
         {% if signup_url != '' %}
 				<tr id="x-signup-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="x-signup-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/x-signup.png" width="35" /></a></td>
+					<td width="75" align="center" valign="middle"><a href="" id="x-signup-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/building-blocks/x-signup.png" width="35" /></a></td>
 					<td><a href="" id="x-signup-url">Signup</a><div id="d-signup"></div></td>
 				</tr>
         {% endif %}
         {% if login_url != '' %}
 				<tr id="x-login-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="{{ login_url }}" id="x-login-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/x-login-png" width="35" /></a></td>
-					<td><a href="{{ login_url }}" id="x-login-url">Signup</a><div id="d-login"></div></td>
+					<td width="75" align="center" valign="middle"><a href="{{ login_url }}" id="x-login-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/building-blocks/x-login.png" width="35" /></a></td>
+					<td><a href="{{ login_url }}" id="x-login-url">Login</a><div id="d-login"></div></td>
 				</tr>
         {% endif %}
 				<tr id="integration">
